updated some more text to personalize

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
           <div class="mt-5">
             <i class="fas fa-4x fa-gem text-primary mb-4"></i>
             <h3 class="h4 mb-2">EMR/EHR Programming</h3>
-            <p class="text-muted mb-0">Experience building forms and backgrounds scripts!</p>
+            <p class="text-muted mb-0">Experience building forms and action scripts!</p>
           </div>
         </div>
         <div class="col-lg-3 col-md-6 text-center">
@@ -210,8 +210,8 @@
   <!-- Call to Action Section -->
   <section class="page-section bg-dark text-white">
     <div class="container text-center">
-      <h2 class="mb-4">Free Download at Start Bootstrap!</h2>
-      <a class="btn btn-light btn-xl" href="https://startbootstrap.com/themes/creative/">Download Now!</a>
+      <h2 class="mb-4">Check Out My Portfolio on GitHub!</h2>
+      <a class="btn btn-light btn-xl" href="https://startbootstrap.com/themes/creative/">View Now!</a>
     </div>
   </section>
 
