--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
   <section class="page-section bg-dark text-white">
     <div class="container text-center">
       <h2 class="mb-4">Check Out My Portfolio on GitHub!</h2>
-      <a class="btn btn-light btn-xl" href="https://startbootstrap.com/themes/creative/">View Now!</a>
+      <a class="btn btn-light btn-xl" href="https://github.com/colby-reyes?tab=repositories">View Now!</a>
     </div>
   </section>
 
