updt to resources section

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
       <div class="row">
         <div class="col-lg-3 col-md-6 text-center">
           <div class="mt-5">
-            <i class="fas fa-4x fa-gem text-primary mb-4"></i>
+            <i class="fas fa-4x fa-notes-medical text-primary mb-4"></i>
             <h3 class="h4 mb-2">EMR/EHR Programming</h3>
             <p class="text-muted mb-0">Form template design. <br>Auto-fill form data. <br>Action scripts.</p>
           </div>
@@ -108,7 +108,7 @@
         </div>
         <div class="col-lg-3 col-md-6 text-center">
           <div class="mt-5">
-            <i class="fas fa-4x fa-globe text-primary mb-4"></i>
+            <i class="fas fa-4x fa-poll-h text-primary mb-4"></i>
             <h3 class="h4 mb-2">Research</h3>
             <p class="text-muted mb-0">Experiment Structure.<br>Data Analysis.<br>Manuscript-writing.</p>
           </div>
