--- a/index.html
+++ b/index.html
@@ -216,6 +216,7 @@
     <div class="container">
       <h2 class="text-center mt-0">Favorite Learning Resources</h2>
       <hr class="divider my-4">
+      <script src="https://gist.github.com/colby-reyes/e47571e794e61ea2226bbc4befef7b0a.js"></script>
       <div class="row">
         <div class="col-lg-3 col-md-6 text-center">
           <a href="https://bengreenfieldfitness.com/" target="_blank">
