--- a/index.html
+++ b/index.html
@@ -251,6 +251,7 @@
     </div>
   </section>
 
+
   <!-- Contact Section -->
   <section class="page-section" id="contact">
     <div class="container">
@@ -258,18 +259,11 @@
         <div class="col-lg-8 text-center">
           <h2 class="mt-0">Let's Get In Touch!</h2>
           <hr class="divider my-4">
-          <p class="text-muted mb-5">Ready to start your next project with us? Give us a call or send us an email and we will get back to you as soon as possible!</p>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-lg-4 ml-auto text-center mb-5 mb-lg-0">
-          <i class="fas fa-phone fa-3x mb-3 text-muted"></i>
-          <div>+1 (202) 555-0149</div>
-        </div>
-        <div class="col-lg-4 mr-auto text-center">
-          <i class="fas fa-envelope fa-3x mb-3 text-muted"></i>
-          <!-- Make sure to change the email address in anchor text AND the link below! -->
-          <a class="d-block" href="mailto:contact@yourwebsite.com">contact@yourwebsite.com</a>
+          <p class="text-muted mb-5">Interested in working with me? Drop in your email below!</p>
+          <form class="form-inline d-flex">
+            <input type="email" class="form-control flex-fill mr-0 mr-sm-2 mb-3 mb-sm-0" id="inputEmail" placeholder="Enter email address...">
+            <button type="submit" class="btn btn-primary mx-auto">Send</button>
+          </form>
         </div>
       </div>
     </div>
@@ -279,6 +273,11 @@
   <footer class="bg-light py-5">
     <div class="container">
       <div class="small text-center text-muted">Copyright &copy; 2019 - Start Bootstrap</div>
+      <div class="social d-flex justify-content-center">
+        <a href="https://github.com/colby-reyes?tab=repositories" target="_blank" class="mx-2 center">
+          <i class="fab fa-github"></i>
+        </a>
+      </div>
     </div>
   </footer>
 
