added mailto button

--- a/index.html
+++ b/index.html
@@ -258,6 +258,10 @@
       <div class="row justify-content-center">
         <div class="col-lg-8 text-center">
           <h2 class="mt-0">Get In Touch!</h2>
+          <div class="container text-center">
+            <h2 class="mb-4">Check Out My Portfolio on GitHub!</h2>
+            <a class="btn btn-primary btn-xl" href="mailto:colby.n.reyes@gmail.com">Contact!</a>
+          </div>
           <hr class="divider my-4">
           <p class="text-muted mb-5">Interested in working with me? Drop in your email below!</p>
           <div class="row">
