updates to font and icons in contact section

--- a/index.html
+++ b/index.html
@@ -257,45 +257,49 @@
     <div class="container">
       <div class="row justify-content-center">
         <div class="col-lg-8 text-center">
-          <h2 class="mt-0">Get In Touch!</h2>
-          <a class="btn btn-primary btn-xl" href="mailto:colby.n.reyes@gmail.com" target="_blank">Contact!</a>
+          <h2 class="mt-0">Want More Info?</h2>
           <hr class="divider my-4">
         </div>
       </div>
     </div>
 
-    <div class="col-md-4 mb-3 mb-md-0">
-      <div class="card py-4 h-100">
-        <div class="card-body text-center">
-          <i class="fas fa-envelope text-primary mb-2"></i>
-          <h4 class="text-uppercase m-0">Email</h4>
-          <hr class="my-4">
-          <div class="small text-black-50">
-            <a href="#">hello@yourdomain.com</a>
+    <div class="row justify-content-center">
+      <div class="col-md-4 mb-3 mb-md-0">
+      <a href="mailto:colby.n.reyes@gmail.com">
+        <div class="card py-4 h-100">
+          <div class="card-body text-center">
+            <i class="fas fa-4x fa-envelope text-primary mb-3"></i>
+            <hr class="my-4">
+            <div class="text-primary font-italic text-center text-black-50">Email me!</div>
+          </div>
+        </div>
+      </a>
+      </div>
+  
+      <div class="col-md-4 mb-3 mb-md-0">
+        <div class="card py-4 h-100">
+          <div class="card-body text-center">
+            <i class="fas fa-4x fa-file-signature text-primary mb-3"></i>
+            <hr class="my-4">
+            <div class="text-primary font-italic text-center text-black-50">View Curriculum Vitae</div>
           </div>
         </div>
       </div>
     </div>
-
-    <div class="col-md-4 mb-3 mb-md-0">
-      <div class="card py-4 h-100">
-        <div class="card-body text-center">
-          <i class="fas fa-mobile-alt text-primary mb-2"></i>
-          <h4 class="text-uppercase m-0">Phone</h4>
-          <hr class="my-4">
-          <div class="small text-black-50">+1 (555) 902-8832</div>
-        </div>
-      </div>
     </div>
-  </div>
+
+
   </section>
 
   <!-- Footer -->
   <footer class="bg-light py-5">
     <div class="container">
       <div class="social d-flex justify-content-center">
-        <a href="https://github.com/colby-reyes?tab=repositories" target="_blank" class="mx-2 center">
-          <i class="fab fa-github"></i>
+        <a href="https://github.com/colby-reyes?tab=repositories" target="_blank" class="mx-2">
+          <i class="fab fa-lg fa-github"></i>
+        </a>
+        <a href="mailto:colby.n.reyes@gmail.com" target="_blank" class="mx-2">
+          <i class="fas fa-lg fa-envelope"></i>
         </a>
       </div>
     </div>
