--- a/index.html
+++ b/index.html
@@ -278,11 +278,13 @@
   
       <div class="col-md-4 mb-3 mb-md-0">
         <div class="card py-4 h-100">
+        <a href="CV/index.html">
           <div class="card-body text-center">
             <i class="fas fa-4x fa-file-signature text-primary mb-3"></i>
             <hr class="my-4">
             <div class="text-primary font-italic text-center text-black-50">View Curriculum Vitae</div>
           </div>
+        </a>
         </div>
       </div>
     </div>
