updated cv page specs

--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
     <div class="row justify-content-center">
       <div class="col-md-4 mb-3 mb-md-0">
       <a href="mailto:colby.n.reyes@gmail.com">
-        <div class="card py-4 h-100">
+        <div class="card card-link py-4 h-100">
           <div class="card-body text-center">
             <i class="fas fa-4x fa-envelope text-primary mb-3"></i>
             <hr class="my-4">
@@ -277,7 +277,7 @@
       </div>
   
       <div class="col-md-4 mb-3 mb-md-0">
-        <div class="card py-4 h-100">
+        <div class="card card-link py-4 h-100">
         <a href="CV/index.html">
           <div class="card-body text-center">
             <i class="fas fa-4x fa-file-signature text-primary mb-3"></i>
