--- a/index.html
+++ b/index.html
@@ -49,6 +49,9 @@
             <a class="nav-link js-scroll-trigger" href="#resources">Resources</a>
           </li>
           <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="/CV/index.html">CV</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
           </li>
         </ul>
