--- a/index.html
+++ b/index.html
@@ -306,6 +306,9 @@
         <a href="mailto:colby.n.reyes@gmail.com" target="_blank" class="mx-2">
           <i class="fas fa-lg fa-envelope"></i>
         </a>
+        <a href="CV/index.html" target="_blank" class="mx-2">
+          <i class="fas fa-lg fa-file-signature"></i>
+        </a>
       </div>
     </div>
   </footer>
