--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
     <div class="container-fluid p-0">
       <div class="row no-gutters">
         <div class="col-lg-4 col-sm-6">
-          <a class="portfolio-box" href="img/portfolio/fullsize/centricity_tile.png">
+          <a class="portfolio-box" href="https://github.com/colby-reyes/MEL_Collection">
             <img class="img-fluid" src="img/portfolio/thumbnails/centricity_tile.png" alt="MEL_library">
             <div class="portfolio-box-caption">
               <div class="project-category text-white-50">
@@ -149,10 +149,10 @@
             <img class="img-fluid" src="img/portfolio/thumbnails/SFN_2017_Logo.png" alt="">
             <div class="portfolio-box-caption">
               <div class="project-category text-white-50">
-                Category
+                Research
               </div>
               <div class="project-name">
-                Project Name
+                Eye-Tracking and Attention Bias
               </div>
             </div>
           </a>
