--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
     <div class="container-fluid p-0">
       <div class="row no-gutters">
         <div class="col-lg-4 col-sm-6">
-          <a class="portfolio-box" href="https://github.com/colby-reyes/MEL_Collection">
+          <a href="https://github.com/colby-reyes/MEL_Collection">
             <img class="img-fluid" src="img/portfolio/thumbnails/centricity_tile.png" alt="MEL_library">
             <div class="portfolio-box-caption">
               <div class="project-category text-white-50">
