--- a/index.html
+++ b/index.html
@@ -132,7 +132,8 @@
     <div class="container-fluid p-0">
       <div class="row no-gutters">
         <div class="col-lg-4 col-sm-6">
-          <a class="portfolio-box" href="img/portfolio/fullsize/Centricity+EMR+Screenshot+1.jpg" text="Click to View Repository">
+          <a href="https://github.com/colby-reyes/MEL_Collection">
+          <a class="portfolio-box" href="img/portfolio/fullsize/Centricity+EMR+Screenshot+1.jpg">
             <img class="img-fluid" src="img/portfolio/thumbnails/centricity_tile.png" alt="MEL_library">
             <div class="portfolio-box-caption">
               <div class="project-category text-white-50">
@@ -143,8 +144,8 @@
               </div>
             </div>
           </a>
+          </a>
         </div>
-      </div>
         <div class="col-lg-4 col-sm-6">
           <a class="portfolio-box" href="img/portfolio/fullsize/SfN Poster/SfN Poster.001.jpeg">
             <img class="img-fluid" src="img/portfolio/thumbnails/SFN_2017_Logo.png" alt="">
