--- a/index.html
+++ b/index.html
@@ -129,7 +129,6 @@
 
   <!-- Portfolio Section -->
   <section id="portfolio">
-    <div class="container-fluid p-0">
       <div class="row no-gutters">
         <div class="col-lg-4 col-sm-6">
           <a href="https://github.com/colby-reyes/MEL_Collection">
@@ -164,10 +163,10 @@
             <img class="img-fluid" src="img/portfolio/thumbnails/3.jpg" alt="">
             <div class="portfolio-box-caption">
               <div class="project-category text-white-50">
-                Category
+                Exercise Physiology
               </div>
               <div class="project-name">
-                Project Name
+                Poster & Paper
               </div>
             </div>
           </a>
@@ -212,7 +211,6 @@
           </a>
         </div>
       </div>
-    </div>
   </section>
 
     
