--- a/index.html
+++ b/index.html
@@ -129,6 +129,7 @@
 
   <!-- Portfolio Section -->
   <section id="portfolio">
+    <div class="container-fluid p-0">
       <div class="row no-gutters">
         <div class="col-lg-4 col-sm-6">
           <a class="portfolio-box" href="img/portfolio/fullsize/Centricity+EMR+Screenshot+1.jpg">
@@ -209,6 +210,7 @@
           </a>
         </div>
       </div>
+    </div>
   </section>
 
     
