add python app to portfolio images/links

--- a/index.html
+++ b/index.html
@@ -171,14 +171,14 @@
           </a>
         </div>
         <div class="col-lg-4 col-sm-6">
-          <a class="portfolio-box" href="img/portfolio/fullsize/4.jpg">
-            <img class="img-fluid" src="img/portfolio/thumbnails/4.jpg" alt="">
+          <a class="portfolio-box" href="/img/portfolio/fullsize/pubQuery.html">
+            <img class="img-fluid" src="https://www.google.com/url?sa=i&source=images&cd=&ved=2ahUKEwir8rTry5DmAhVJSK0KHY_hB8AQjRx6BAgBEAQ&url=https%3A%2F%2Fwww.the-scientist.com%2Fnews-opinion%2Facademics-raise-concerns-about-predatory-journals-on-pubmed--65856&psig=AOvVaw3cCqAuWn-gltKcH9kiAAhv&ust=1575157151081905" alt="">
             <div class="portfolio-box-caption">
               <div class="project-category text-white-50">
-                Category
+                Python Apps
               </div>
               <div class="project-name">
-                Project Name
+                pubQuery<br><i>CLI app to search PubMed with Google search engine</i>
               </div>
             </div>
           </a>
@@ -219,7 +219,7 @@
     <div class="container">
       <h2 class="text-center mt-0">Favorite Learning Resources</h2>
       <hr class="divider my-4">
-        <a class="col-lg-3 text-center btn btn-light" href="https://www.evernote.com/shard/s318/sh/826a5e34-481d-4337-a901-863ba9f972ef/067f7772caea0f0872a6021be8991262">
+        <a class="btn btn-light" href="https://www.evernote.com/shard/s318/sh/826a5e34-481d-4337-a901-863ba9f972ef/067f7772caea0f0872a6021be8991262">
           Classes I'm Taking
         </a>
       <div class="row">
