move evernote link

--- a/index.html
+++ b/index.html
@@ -129,10 +129,9 @@
 
   <!-- Portfolio Section -->
   <section id="portfolio">
-    <div class="container-fluid p-0">
       <div class="row no-gutters">
         <div class="col-lg-4 col-sm-6">
-          <a class="portfolio-box" href="img/portfolio/fullsize/Centricity+EMR+Screenshot+1.jpg">
+          <a class="card-img" href="img/portfolio/fullsize/Centricity+EMR+Screenshot+1.jpg">
             <img class="img-fluid" src="img/portfolio/thumbnails/centricity_tile.png" alt="MEL_library">
             <div class="portfolio-box-caption">
               <div class="project-category text-white-50">
@@ -210,7 +209,6 @@
           </a>
         </div>
       </div>
-    </div>
   </section>
 
     
@@ -219,9 +217,6 @@
     <div class="container">
       <h2 class="text-center mt-0">Favorite Learning Resources</h2>
       <hr class="divider my-4">
-        <a class="btn btn-light" href="https://www.evernote.com/shard/s318/sh/826a5e34-481d-4337-a901-863ba9f972ef/067f7772caea0f0872a6021be8991262">
-          Classes I'm Taking
-        </a>
       <div class="row">
         <div class="col-lg-3 col-md-6 text-center">
           <a href="https://bengreenfieldfitness.com/" target="_blank">
@@ -244,6 +239,9 @@
           </a>
         </div>
       </div>
+      <a class="justify-content-center btn btn-light" href="https://www.evernote.com/shard/s318/sh/826a5e34-481d-4337-a901-863ba9f972ef/067f7772caea0f0872a6021be8991262">
+        Classes I'm Taking
+      </a>
     </div>
   </section>
     
