--- a/index.html
+++ b/index.html
@@ -239,9 +239,11 @@
           </a>
         </div>
       </div>
-      <a class="justify-content-center btn btn-light" href="https://www.evernote.com/shard/s318/sh/826a5e34-481d-4337-a901-863ba9f972ef/067f7772caea0f0872a6021be8991262">
-        Classes I'm Taking
-      </a>
+      <div class="col-lg-3 col-md-6 text-center">
+        <a class="justify-content-center btn btn-light" href="https://www.evernote.com/shard/s318/sh/826a5e34-481d-4337-a901-863ba9f972ef/067f7772caea0f0872a6021be8991262">
+          Classes I'm Taking
+        </a>
+      </div>
     </div>
   </section>
     
