--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <a class="nav-link js-scroll-trigger" href="#resources">Resources</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="/CV/index.html">CV</a>
+            <a class="nav-link js-scroll-trigger" href="/CV">CV</a>
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
@@ -383,7 +383,7 @@
   
       <div class="col-md-4 mb-3 mb-md-0">
         <div class="card card-link py-4 h-100 card-img-overlay">
-        <a href="CV/index.html">
+        <a href="CV">
           <div class="card-body text-center">
             <i class="fas fa-4x fa-file-signature text-primary mb-3"></i>
             <hr class="my-4">
@@ -408,7 +408,7 @@
         <a href="mailto:colby.n.reyes@gmail.com" target="_blank" class="mx-2">
           <i class="fas fa-lg fa-envelope"></i>
         </a>
-        <a href="CV/index.html" target="_blank" class="mx-2">
+        <a href="CV" target="_blank" class="mx-2">
           <i class="fas fa-lg fa-file-signature"></i>
         </a>
       </div>
