--- a/index.html
+++ b/index.html
@@ -405,7 +405,7 @@
         <a href="https://github.com/colby-reyes?tab=repositories" target="_blank" class="mx-2">
           <i class="fab fa-lg fa-github"></i>
         </a>
-        <a href="happy_birthday_mom" target="_blank" class="mx-2">
+        <a href="mailto:colby.n.reyes@gmail.com" target="_blank" class="mx-2">
           <i class="fas fa-lg fa-envelope"></i>
         </a>
         <a href="CV" target="_blank" class="mx-2">
