fixed image dimensions in portfolio section

--- a/index.html
+++ b/index.html
@@ -142,10 +142,10 @@
           <a class="card-link" href="/img/portfolio/fullsize/pubQuery.html">
             <img class="img-fluid" src="img/portfolio/thumbnails/pubmed.jpg" alt=""> 
             <div class="portfolio-box-caption">
-              <div class="project-category text-white-50">
+              <div class="project-category">
                 Python Apps
               </div>
-              <div class="project-name">
+              <div class="project-name text-center text-white-50">
                 pubQuery<br><i>CLI app to search PubMed with Google search engine</i>
               </div>
             </div>
@@ -166,10 +166,10 @@
           <a class="card-link" href="/sample_projects/arch_backup_service.html">
             <img class="img-fluid" src="img/portfolio/fullsize/backup_tile.jpeg" alt=""> 
             <div class="portfolio-box-caption">
-              <div class="project-category text-white-50">
+              <div class="project-category">
                 Arch Linux
               </div>
-              <div class="project-name">
+              <div class="project-name text-center text-white-50">
                 backup.timer<br><i>Automated, zipped system backup using Arch service/timer pairs</i>
               </div>
             </div>
@@ -191,10 +191,10 @@
           <a class="card-link" href="https://github.com/colby-reyes/MEL_Collection">
             <img class="img-fluid" src="img/portfolio/thumbnails/centricity_tile.png" alt="MEL_library">
             <div class="portfolio-box-caption">
-              <div class="project-category text-white-50">
+              <div class="project-category">
                 EMR Systems
               </div>
-              <div class="project-name">
+              <div class="project-name text-center text-white-50">
                 <i>MEL Library</i>
               </div>
             </div>
@@ -214,10 +214,10 @@
           <a class="card-link" href="img/portfolio/fullsize/SfN Poster/SfN Poster.001.jpeg">
             <img class="img-fluid" src="img/portfolio/thumbnails/SFN_2017_Logo.png" alt="Research">
             <div class="portfolio-box-caption">
-              <div class="project-category text-white-50">
+              <div class="project-category">
                 Research
               </div>
-              <div class="project-name">
+              <div class="project-name text-center text-white-50">
                 <i>Eye-Tracking and Attention Bias</i>
               </div>
             </div>
@@ -227,10 +227,10 @@
           <a class="card-link" href="img/portfolio/Physiology_Research/ResearchPaper.pdf">
             <img class="img-fluid" src="img/portfolio/Physiology_Research/AHS_Poster.jpeg" alt="Undergraduate Projects">
             <div class="portfolio-box-caption">
-              <div class="project-category text-white-50">
+              <div class="project-category">
                 Exercise Physiology
               </div>
-              <div class="project-name">
+              <div class="project-name text-center text-white-50">
                 <i>Poster & Paper</i>
               </div>
             </div>
@@ -249,10 +249,10 @@
           <a class="card-link" href="sample_projects/Determination_of_Coherence_Length_and_Coherence_time_for_a_Diode_Laser_Using_a_Czerny_Turner_Monochrometer (1).pdf">
             <img class="img-fluid" src="sample_projects/physics.jpg" alt="Image: static.kent.ac.uk">
             <div class="portfolio-box-caption">
-              <div class="project-category text-white-50">
+              <div class="project-category">
                 Physics Papers
               </div>
-              <div class="project-name">
+              <div class="project-name text-center text-white-50">
                 <i>Determination of Coherence Length and Coherence time for a Diode Laser Using a Czerny-Turner Monochrometer</i>
               </div>
             </div>
@@ -263,10 +263,10 @@
             <a class="card-link" href="sample_projects/Determination_of_Photopeak_Energy_Using_a_Scintillator_Device.pdf">
               <img class="img-fluid" src="https://ars.els-cdn.com/content/image/3-s2.0-B978141605198500006X-f006-012-9781416051985.jpg" alt="Image: ars.els-cdn.com">
               <div class="portfolio-box-caption">
-                <div class="project-category text-white-50">
+                <div class="project-category">
                   Physics Papers
                 </div>
-                <div class="project-name">
+                <div class="project-name text-center text-white-50">
                   <i>Determination of Photopeak Energy Using a Scintillator Device</i>
                 </div>
               </div>
@@ -278,10 +278,10 @@
             <a class="card-link" href="sample_projects/Determination_of_Planck_s_Constant_from_LED_Knee_Voltage_and_Wavelength.pdf">
               <img class="img-fluid" src="https://i.ytimg.com/vi/LnmCsNQsR68/maxresdefault.jpg" alt="Image: i.ytimg.com">
               <div class="portfolio-box-caption">
-                <div class="project-category text-white-50">
+                <div class="project-category">
                   Physics Papers
                 </div>
-                <div class="project-name">
+                <div class="project-name text-center text-white-50">
                   <i>Determination of Planck's Constant from LED Knee Voltage and Wavelength</i>
                 </div>
               </div>
@@ -393,7 +393,7 @@
         </div>
       </div>
     </div>
-    </div>
+
 
 
   </section>
