--- a/app_232_demo.html
+++ b/app_232_demo.html
@@ -1,1 +1,34 @@
-<iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="800" height="450" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2FzixnAcfUr1m0wpj2DT6Pw5%2FPhysicalActivity_App%3Fnode-id%3D0%253A3%26viewport%3D557%252C428%252C0.09283512830734253%26scaling%3Dscale-down" allowfullscreen></iframe>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta name="description" content="colby-reyes.github.io">
+  <meta name="author" content="colby-reyes">
+
+  <title>Colby Reyes - Portfolio</title>
+
+  <!-- Font Awesome Icons -->
+  <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
+
+  <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css?family=Merriweather+Sans:400,700" rel="stylesheet">
+  <link href='https://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic' rel='stylesheet' type='text/css'>
+
+  <!-- Plugin CSS -->
+  <link href="vendor/magnific-popup/magnific-popup.css" rel="stylesheet">
+
+  <!-- Theme CSS - Includes Bootstrap -->
+  <link href="css/creative.css" rel="stylesheet">
+
+</head>
+
+<body id="page-top">
+  <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="800" height="450" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2FzixnAcfUr1m0wpj2DT6Pw5%2FPhysicalActivity_App%3Fnode-id%3D0%253A3%26viewport%3D557%252C428%252C0.09283512830734253%26scaling%3Dscale-down" allowfullscreen></iframe>
+</body>
+
+</html>
+
+
