--- a/app_232_demo.html
+++ b/app_232_demo.html
@@ -26,7 +26,7 @@
 </head>
 
 <body id="page-top">
-  <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width=screen height=screen src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2FzixnAcfUr1m0wpj2DT6Pw5%2FPhysicalActivity_App%3Fnode-id%3D0%253A3%26viewport%3D557%252C428%252C0.09283512830734253%26scaling%3Dscale-down" allowfullscreen></iframe>
+  <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="100%" height="100%" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2FzixnAcfUr1m0wpj2DT6Pw5%2FPhysicalActivity_App%3Fnode-id%3D0%253A3%26viewport%3D557%252C428%252C0.09283512830734253%26scaling%3Dscale-down" allowfullscreen></iframe>
 </body>
 
 </html>
