add LinkedIn card

--- a/index.html
+++ b/index.html
@@ -366,22 +366,25 @@
           <h2 class="mt-0">Want More Info?</h2>
           <hr class="divider my-4">
         </div>
+        <div class="badge-base LI-profile-badge" data-locale="en_US" data-size="large" data-theme="light" data-type="VERTICAL" data-vanity="colby-reyes-a5b544224" data-version="v1">
+          <a class="badge-base__link LI-simple-link" href="https://www.linkedin.com/in/colby-reyes-a5b544224?trk=profile-badge">Colby Reyes</a>
+        </div>
       </div>
     </div>
 
     <div class="row justify-content-center">
       <div class="col-md-4 mb-3 mb-md-0">
-      <a href="mailto:colby.n.reyes@gmail.com">
-        <div class="card card-link py-4 h-100">
-          <div class="card-body text-center">
-            <i class="fas fa-4x fa-envelope text-primary mb-3"></i>
-            <hr class="my-4">
-            <div class="text-primary font-italic text-center text-black-50">Email me!</div>
+        <a href="mailto:colby.n.reyes@gmail.com">
+          <div class="card card-link py-4 h-100">
+            <div class="card-body text-center">
+              <i class="fas fa-4x fa-envelope text-primary mb-3"></i>
+              <hr class="my-4">
+              <div class="text-primary font-italic text-center text-black-50">Email me!</div>
+            </div>
           </div>
-        </div>
-      </a>
-      </div>
-  
+        </a>
+        </div>              
+
       <div class="col-md-4 mb-3 mb-md-0">
         <div class="card card-link py-4 h-100 card-img-overlay">
         <a href="CV">
@@ -426,6 +429,7 @@
 
   <!-- Custom scripts for this template -->
   <script src="js/creative.min.js"></script>
+  <script src="https://platform.linkedin.com/badges/js/profile.js" async defer type="text/javascript"></script>
 
 </body>
 
