--- a/index.html
+++ b/index.html
@@ -313,8 +313,8 @@
   <!-- Resources Section -->
   <section class="page-section" id="resources">
       <h2 class="text-center mt-0">Favorite Learning Resources</h2>
-      <hr class="divider my-4">
     <div class="container">
+    <hr class="divider my-4" color="black">
       <h4 class="text-left mt-5">Health & Fitness</h4>
       <hr class="divider ml-2 text-left">
       <div class="row">
@@ -352,9 +352,8 @@
         </div>
     </div>  
       <div class="container text-center">
-        <hr>
-        <hr class="divider my-4">
         <h2 class="mb-4">Classes I'm Taking</h2>
+        <hr class="divider my-4" color="black">
         <a class="btn btn-light btn-xl" href="https://www.evernote.com/shard/s318/sh/826a5e34-481d-4337-a901-863ba9f972ef/067f7772caea0f0872a6021be8991262">View My Course Checklist!</a>
       </div>
   </section>
@@ -372,13 +371,24 @@
   <!-- Contact Section -->
   <section class="page-section" id="contact">
     <div class="container">
-      <div class="row justify-content-center">
-        <div class="col-lg-8 text-center">
-          <h2 class="mt-0">Want More Info?</h2>
-          <hr class="divider my-4">
+        <div class="row justify-content-center">
+            <div class="col-lg-8 text-center">
+                <hr>
+                <h2 class="mt-0"><br></h2>
+                <div class="justify-content-center badge-base LI-profile-badge" data-locale="en_US" data-size="large" data-theme="light" data-type="VERTICAL" data-vanity="colby-reyes-a5b544224" data-version="v1">
+                        <a class="badge-base__link LI-simple-link" href="https://www.linkedin.com/in/colby-reyes-a5b544224?trk=profile-badge">Colby Reyes</a>
+                </div>
+            </div>
         </div>
-        <div class="badge-base LI-profile-badge" data-locale="en_US" data-size="large" data-theme="light" data-type="VERTICAL" data-vanity="colby-reyes-a5b544224" data-version="v1">
-          <a class="badge-base__link LI-simple-link" href="https://www.linkedin.com/in/colby-reyes-a5b544224?trk=profile-badge">Colby Reyes</a>
+        <div class="row justify-content-center">
+            <div class="col-lg-8 text-center">
+                <h2 class="mt-0"><br></h2>
+            </div>
+        </div>
+      <div class="row justify-content-center text-center">
+        <div class="col-lg-8 text-center">
+          <h2 class="mt-0"><br>Want More Info?<br></h2>
+          <hr class="my-4" color="black">
         </div>
       </div>
     </div>
@@ -389,12 +399,12 @@
           <div class="card card-link py-4 h-100">
             <div class="card-body text-center">
               <i class="fas fa-4x fa-envelope text-primary mb-3"></i>
-              <hr class="my-4">
-              <div class="text-primary font-italic text-center text-black-50">Email me!</div>
+                <hr class="my-4">
+                    <div class="text-primary font-italic text-center text-black-50">Email me!</div>
             </div>
           </div>
         </a>
-        </div>              
+      </div>              
 
       <div class="col-md-4 mb-3 mb-md-0">
         <div class="card card-link py-4 h-100 card-img-overlay">
@@ -417,6 +427,9 @@
   <footer class="bg-light py-5">
     <div class="container">
       <div class="social d-flex justify-content-center">
+        <a href="https://www.linkedin.com/in/colby-reyes-a5b544224?trk=profile-badge" target="_blank" class="mx-2">
+          <i class="fab fa-lg fa-linkedin"></i>
+        </a>
         <a href="https://github.com/colby-reyes?tab=repositories" target="_blank" class="mx-2">
           <i class="fab fa-lg fa-github"></i>
         </a>
