--- a/index.html
+++ b/index.html
@@ -372,15 +372,11 @@
   <section class="page-section" id="contact">
     <div class="container">
         <div class="row justify-content-center">
-            <div class="col-lg-8 text-center">
-                <hr>
-                <h2 class="mt-0"><br></h2>
+            <h2 class="mt-0"><br></h2>
                 <div class="justify-content-center badge-base LI-profile-badge" data-locale="en_US" data-size="large" data-theme="light" data-type="VERTICAL" data-vanity="colby-reyes-a5b544224" data-version="v1">
-                        <a class="badge-base__link LI-simple-link" href="https://www.linkedin.com/in/colby-reyes-a5b544224?trk=profile-badge">Colby Reyes</a>
+                        <a class="badge-base__link LI-simple-link" href="https://www.linkedin.com/in/colby-reyes-a5b544224?trk=profile-badge"></a>
                 </div>
             </div>
-        </div>
-        <div class="row justify-content-center">
             <div class="col-lg-8 text-center">
                 <h2 class="mt-0"><br></h2>
             </div>
