--- a/index.html
+++ b/index.html
@@ -371,20 +371,11 @@
   <!-- Contact Section -->
   <section class="page-section" id="contact">
     <div class="container">
-        <div class="row justify-content-center">
-            <h2 class="mt-0"><br></h2>
-                <div class="justify-content-center badge-base LI-profile-badge" data-locale="en_US" data-size="large" data-theme="light" data-type="VERTICAL" data-vanity="colby-reyes-a5b544224" data-version="v1">
-                        <a class="badge-base__link LI-simple-link" href="https://www.linkedin.com/in/colby-reyes-a5b544224?trk=profile-badge"></a>
-                </div>
-            </div>
-            <div class="col-lg-8 text-center">
-                <h2 class="mt-0"><br></h2>
-            </div>
-        </div>
+
       <div class="row justify-content-center text-center">
         <div class="col-lg-8 text-center">
           <h2 class="mt-0"><br>Want More Info?<br></h2>
-          <hr class="my-4" color="black">
+          <hr class="my-4" color="black"><br>
         </div>
       </div>
     </div>
@@ -400,8 +391,14 @@
             </div>
           </div>
         </a>
-      </div>              
-
+      </div>
+      <div class="col-md-4 mb-3 mb-md-0">
+        <a href="https://www.linkedin.com/in/colby-reyes-a5b544224?trk=profile-badge">
+          <div class="justify-content-center badge-base LI-profile-badge" data-locale="en_US" data-size="large" data-theme="light" data-type="VERTICAL" data-vanity="colby-reyes-a5b544224" data-version="v1">
+                <a class="badge-base__link LI-simple-link" href="https://www.linkedin.com/in/colby-reyes-a5b544224?trk=profile-badge"></a>
+          </div>
+        </a>
+      </div>
       <div class="col-md-4 mb-3 mb-md-0">
         <div class="card card-link py-4 h-100 card-img-overlay">
         <a href="CV">
