--- a/happy_birthday_mom/index.html
+++ b/happy_birthday_mom/index.html
@@ -543,19 +543,19 @@
     </div>
   </div>
 
-  <!-- Bootstrap core JavaScript -->
+  <!-- Bootstrap core JavaScript 
   <script src="vendor/jquery/jquery.min.js"></script>
-  <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script> -->
 
-  <!-- Plugin JavaScript -->
-  <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
+  <!-- Plugin JavaScript
+  <script src="vendor/jquery-easing/jquery.easing.min.js"></script> -->
 
-  <!-- Contact form JavaScript -->
+  <!-- Contact form JavaScript
   <script src="js/jqBootstrapValidation.js"></script>
-  <script src="js/contact_me.js"></script>
+  <script src="js/contact_me.js"></script> -->
 
-  <!-- Custom scripts for this template -->
-  <script src="js/agency.min.js"></script>
+  <!-- Custom scripts for this template
+  <script src="js/agency.min.js"></script> -->
 
 </body>
 
