--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             <a class="nav-link js-scroll-trigger" href="#resources">Resources</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="CV">CV</a>
+            <a class="nav-link js-scroll-trigger" href="CV/creyes_CV.pdf">CV</a>
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
